Chapter 2: js behind the scene

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
 
   <body>
-    <h1>Section 2: JavaScript Language Basics</h1>
-    <h2>Learning difference between let and var declaration of the variable</h2>
-    <script src="letAndVar.js"></script>
+    <h1>JavaScript Language Basics</h1>
+    <!-- <script src="letAndVar.js"></script> -->
+    <script src="js-behind-the-scene.js"></script>
   </body>
 </html>
